# Facial-Recognition-App

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
camera/: stream.py
core/: loader.py  recognizer.py  saver.py
ui/: render.py
