[project]
name = "facial-recognition-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
